--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Joshua's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="../../assets/css/bundle.css"/>
+
+    <link rel="icon" type="image/png" href="../../assets/images/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="../../assets/images/favicon.svg" />
+    <link rel="shortcut icon" href="../../assets/images/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../../assets/images/apple-touch-icon.png" />
+    <link rel="manifest" href="../../manifest.json" />
 </head>
 <body>
 <main>
