--- a/src/assets/css/bundle.css
+++ b/src/assets/css/bundle.css
@@ -66,7 +66,12 @@ html {
   line-height: 1.6;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 700;
   font-size: 1.2rem;
   line-height: 1.2em;
@@ -129,7 +134,12 @@ li {
   margin-bottom: 0.5em;
 }
 
-p, ul, ol, blockquote, pre, table {
+p,
+ul,
+ol,
+blockquote,
+pre,
+table {
   margin-top: 1em;
   margin-bottom: 1em;
 }
@@ -189,7 +199,7 @@ img {
 
 .tech-badge {
   display: inline-block;
-  font-size: 0.70em;
+  font-size: 0.7em;
   padding: 0.1em 0.5em;
   margin: 0.1em 0.2em;
   border-radius: 9999px;
@@ -251,7 +261,6 @@ img {
   background-color: rgba(var(--gray), 0.2);
 }
 
-
 @media (prefers-color-scheme: dark) {
   html {
     color: #e0e0e0;
@@ -291,5 +300,35 @@ img {
 
   .project-tag {
     color: #999;
+  }
+}
+
+@media (max-width: 600px) {
+  html {
+    padding: 0.6rem;
+    font-size: 14px;
+    max-width: unset;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-size: 1.1rem;
+  }
+
+  code {
+    font-size: 0.9em;
+  }
+
+  pre {
+    font-size: 0.9em;
+  }
+
+  .tech-badge {
+    font-size: 0.65em;
+    padding: 0.05em 0.4em;
   }
 }
