--- a/src/assets/css/photography.css
+++ b/src/assets/css/photography.css
@@ -2,12 +2,25 @@ html {
     max-width: 1200px;
 }
 
-img {
-    max-width: 15rem;
+#photography-gallery img {
     border-radius: 0.5rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     cursor: pointer;
+    margin-bottom: 0.5rem;
+    background-color: #a2a2a2;
+    max-width: 100%;
+    max-height: 15rem;
+
+}
+
+#photography-gallery li {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 18rem;
+    max-height: 20rem;
 }
 
 #photography-gallery li::before {
@@ -20,11 +33,19 @@ img {
     width: 100%;
     height: 100%;
     display: flex;
-    gap: 1rem;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items: end;
     padding: 0;
+}
+
+#photography-gallery p {
+    min-height: 2.5rem;
+    width: 100%;
+    text-align: center;
+    font-size: 0.8rem;
+    color: #777676;
+    margin-block: auto;
 }
 
 #photo-modal {
@@ -38,14 +59,22 @@ img {
     justify-content: center;
     align-items: center;
     z-index: 1000;
+    flex-direction: column;
 }
 
 #photo-modal img {
-    max-width: 90%;
-    max-height: 90%;
+    height: 85%;
+    width: auto;
     border-radius: 0.5rem;
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
-    cursor: default;
+    background-color: #a2a2a2;
+}
+
+#photo-modal p {
+    margin-top: 1rem;
+    color: white;
+    font-size: 1.4rem;
+    text-align: center;
 }
 
 #photo-modal .close-button {
