--- a/src/assets/css/photography.css
+++ b/src/assets/css/photography.css
@@ -2,7 +2,18 @@ html {
     max-width: 1200px;
 }
 
-#photography-gallery img {
+.gallery {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.gallery-title {
+    font-size: 1.2rem;
+    margin-bottom: 1.2rem;
+}
+
+.gallery ul img {
     border-radius: 0.5rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -14,7 +25,7 @@ html {
 
 }
 
-#photography-gallery li {
+.gallery ul li {
     list-style: none;
     display: flex;
     flex-direction: column;
@@ -23,13 +34,13 @@ html {
     max-height: 20rem;
 }
 
-#photography-gallery li::before {
+.gallery ul li::before {
     content: "";
     display: none;
     width: 0;
 }
 
-#photography-gallery {
+.gallery ul {
     width: 100%;
     height: 100%;
     display: flex;
@@ -39,7 +50,7 @@ html {
     padding: 0;
 }
 
-#photography-gallery p {
+.gallery ul p {
     min-height: 2.5rem;
     width: 100%;
     text-align: center;
