--- a/src/assets/css/photography.css
+++ b/src/assets/css/photography.css
@@ -13,23 +13,23 @@ html {
     margin-bottom: 1.2rem;
 }
 
-.gallery ul img {
+.gallery-image {
     border-radius: 0.5rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     cursor: pointer;
-    margin-bottom: 0.5rem;
+    margin: 0;
     background-color: #a2a2a2;
-    max-width: 100%;
-    max-height: 15rem;
-
+    object-fit: cover;
+    width: 20rem;
+    height: 12rem;
 }
 
 .gallery ul li {
     list-style: none;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     width: 18rem;
     max-height: 20rem;
 }
@@ -51,12 +51,33 @@ html {
 }
 
 .gallery ul p {
-    min-height: 2.5rem;
     width: 100%;
-    text-align: center;
     font-size: 0.8rem;
     color: #777676;
-    margin-block: auto;
+    margin: 0;
+    padding: 0;
+}
+
+.description {
+    margin-top: 1rem;
+    text-align: center;
+    min-height: 2.5rem;
+}
+
+.camera-info {
+    display: flex;
+    justify-content: start;
+    gap: .5rem;
+    align-items: center;
+}
+
+.camera-info img {
+    margin: 0;
+    width: 14px;
+    height: 14px;
+}
+
+.camera-model {
 }
 
 #photo-modal {
